Improve header, add update items

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -27,4 +27,9 @@
         align-items: center;
         gap: 5px;
     }
+
+    .search-bar {
+        position: relative;
+        display: inline-block;
+    }
 }
