--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,3 +3,9 @@
 .rounded-corners {
     border-radius: $border-radius;
 }
+
+.gray-background {
+    background-color: $background-gray;
+    padding: ratio(1);
+    border-radius: 0.5rem;
+}
