--- a/src/components/status-update/StatusUpdate.scss
+++ b/src/components/status-update/StatusUpdate.scss
@@ -1,14 +1,5 @@
-@import '../../sass/main.scss';
-
-$pic-size: ratio(3);
-.profile-pic {
-    width: $pic-size;
-    height: $pic-size;
-    border-radius: 100%;
-}
+@import '../../sass/base/colors';
 
 .status-container {
-    background-color: gray(92);
-    padding: ratio(1);
-    border-radius: 0.5rem;
+    background-color: $background-gray;
 }
